# skin-disease-recognition

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  agents.md  docker-compose.yaml  pyproject.toml
.dvc/: config
.github/workflows/: ci.yaml
conf/: config.yaml
conf/model/: efficientnet_b0.yaml  efficientnet_b0_pretrained.yaml  efficientnet_b1.yaml  efficientnet_b1_pretrained.yaml  efficientnet_b3.yaml  efficientnet_b3_pretrained.yaml  efficientnet_b4_pretrained.yaml  efficientnet_b5_pretrained.yaml  resnet18.yaml  resnet18_pretrained.yaml  resnet50.yaml  resnet50_pretrained.yaml
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AnalysisScreen.tsx  CameraCapture.tsx  ClassificationReport.tsx  Header.tsx  HomeScreen.tsx  ImageUploader.tsx  MetricsDisplay.tsx  PredictionChart.tsx  Sidebar.tsx
frontend/src/hooks/: index.ts  useClassificationReport.ts  useModelInfo.ts  usePrediction.ts  useTheme.ts
frontend/src/services/: api.ts
frontend/src/stitch_reference/: code.html
frontend/src/stitch_reference/dark_mode_refined_analysis_1/: code.html
frontend/src/stitch_reference/dark_mode_refined_analysis_2/: code.html
frontend/src/stitch_reference/model_details/: code.html
frontend/src/types/: api.ts
frontend/src/utils/: exportReport.ts  validation.ts
models/: EFFICIENTNET-B0.dvc  EFFICIENTNET-B0v2.dvc  EFFICIENTNET-B1v3.dvc  EFFICIENTNET-B3v4.dvc  efficientnet_b0_pretrained.dvc
notebooks/: eda.ipynb  evaluation.ipynb  model_inspection.ipynb
src/skin_disease_recognition/: config.py  download_dataset.py
src/skin_disease_recognition/core/: config.py
src/skin_disease_recognition/data/: dataset.py  loaders.py
src/skin_disease_recognition/modeling/: engine.py  train.py
src/skin_disease_recognition/serving/: app.py  download_model.py  preprocessing.py
src/skin_disease_recognition/utils/: download_dataset.py  plots.py  seeding.py
tests/: conftest.py  test_api.py  test_core.py  test_data.py  test_preprocessing.py  test_utils.py
